fix: alignment issue

--- a/src/components/common/table-wrapper/index.scss
+++ b/src/components/common/table-wrapper/index.scss
@@ -28,7 +28,9 @@
       .search-input-otr {
         flex: 1;
       }
-
+      .search-otr-wrapper {
+        width: 230px;
+      }
       .action {
         display: flex;
       }
